--- a/css/style.css
+++ b/css/style.css
@@ -1,124 +1,581 @@
 
-.data{
-    background-color: #F7ECDE;
-    min-height: 100vh;
+a{
+    text-decoration: none;
 }
-.web-title{
-    font-size: 50px;
-    line-height: 60px;
-    font-weight: 500;
-    position: relative;
-    display: inline-block;
-    z-index: 10;
-    font-family: " cursive";
+.title-color{
+    color: #343434;
 }
-.web-title::after{
-    content: "";
-    position: absolute;
-    
-    left: 0;
-    
-    bottom: 0;
-    background-color: #FEC260;
-    width: 100%;
-    height: 35%;
-    z-index: -1;
-    transition: .4s ease;
+.text-color{
+    color: #748182;
 }
-.web-title:hover::after{
-    height: 60%;
+.second-text-color{
+    color: #999999;
 }
-.title{
-    font-size: 25px;
-    background: transparent;
-    background-image: linear-gradient(to right, #3ca55c, #b5ac49);
-    display: inline-block;
+.fit-content{
+    width: fit-content;
 }
-.Bookmarker-body{
-    border-top: 2px black dotted;
-    border-bottom: 2px black dotted;
-    
+@media screen and (min-width:768px){
+    .container{
+        width: 750px;
+    }
 }
-.btn-submit{
-    width: 150px;
-    height: 40px;
-    background-color: #D1512D;
-    border-radius: 10px ;
-    border: none;
-    color: white;
-    transition: .4s ease;
+@media screen and (min-width:992px){
+    .container{
+        width: 970px;
+    }
 }
-.btn-submit:hover{
-    background-color: #BB4120;
-}
-.btn-clear{
-    width: 90px;
-    height: 40px;
-    background-color: #D1512D;
-    border-radius: 10px ;
-    border: none;
-    color: white;
-    transition: .4s ease;
-}
-.btn-clear:hover{
-    background-color: #BB4120;
-}
-.table{
-    background-color: #F8F9FA;
-}
-.btn-visit{
-    background-color: #8A9E23;
-    color: white;
-}
-.btn-delete{
-    background-color: #D30820;
-    color: white;
+@media screen and (min-width:1200px){
+    .container{
+        width: 1170px;
+    }
 }
 
-.info-modal {
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: #f1f1f1;
-    padding: 20px;
-    border: 1px solid #888;
-    z-index: 1;
-    width: 500px;
-    background-color: #FFFFFF;
+
+/* -----------navbar section--------------- */
+.nav-link i{
+    font-size: 12px;
 }
-.red{
-    width: 20px;
-    height: 20px;
-    background-color: red;
-    border-radius: 50%;
-    margin-right: 10px;
+.navbar{
+    background: transparent;
 }
-.blue{
-    width: 20px;
-    height: 20px;
-    background-color: blue;
-    border-radius: 50%;
-    margin-right: 10px;
+.nav-link{
+    margin: 30px 0 10px 30px;
+    position: relative;
+    font-family: 14px;
+    line-height: 20px;
+    font-family: 400;
 }
-.green{
-    width: 20px;
-    height: 20px;
-    background-color: green;
-    border-radius: 50%;
+
+.navbar{
+    z-index: 1000;
+    background-color: #0f1112f3;
 }
-.btn-close{
-    font-size: 20px;
-    font-weight: 900;
-    color: black;
+.nav-link::before{
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 0;
+    top: 120%;
+    left: 0;
+    background-color: #ffffff;
+    transition: .4s ease;
 }
-.layer{
-    background-color: #0007;
-    position: fixed;
+    .nav-link:hover:before{
+        width: 90%;
+    }
+    .nav-link.active:before{
+        width: 90%;
+    }
+.navbar-brand{
+    font-size: 18px;
+    line-height: 26px;
+    font-weight: 800;
+}
+/* ----------home section------------------ */
+#home{
+    background-image: url(/imgs/bg.jpg);
+    background-position: center center;
+    background-size: cover;
+    background-attachment: fixed;
+}
+#home::after{
+    content: "";
+    position: absolute;
     top: 0;
+    bottom: 0;
     left: 0;
     right: 0;
-    bottom: 0;
-    z-index: 20;
-    display: none;
+    background: #000;
+    opacity: 0.65;
+    z-index: 2;
+}
+.home-content{
+    z-index: 5;
+}
+
+.home-content h5{
+    font-size: 50px;
+    line-height: 55px;
+    font-weight: 800;
+}
+.home-social a span{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 14px;
+    width: 35px;
+    height: 35px;
+    line-height: 35px;
+    border-radius: 50%;
+    background: rgba(0, 0, 0, 0.3);
+    color: #ffffff;
+}
+.home-social a span i{
+    text-align: center;
+}
+.home-content p{
+    font-size: 60px;
+    line-height: 72px;
+    font-weight: 200;
+    border-right: 2px solid rgba(255, 255, 255, 0.796);
+    animation: control-width 3s 1s both infinite;
+    overflow: hidden;
+    white-space: nowrap;
+    position: relative;
+}
+/* @keyframes control-width{
+    0% {
+        width: 130px;
+    }
+    50% {
+        width: 410px;
+    }
+    100%{
+        width: 140px;
+    }
+} */
+@keyframes control-width{
+    0% {
+        width: 130px;
+    }
+    30%{
+        width: 410px;
+    }
+    80% {
+        width: 410px;
+    }
+    100%{
+        width: 140px;
+    }
+}
+/* -----------------------------about section---------------------- */
+#about{
+    padding: 100px 0 70px;
+}
+.hero-img::after{
+    content: "";
+    width: 80%;
+    height: 80%;
+    position: absolute;
+    left: 0px;
+    bottom: -30px;
+    background-image: url(/imgs/dots.png);
+    background-repeat: repeat;
+    z-index: -1;
+}
+.about-content h3{
+    font-size: 30px;
+    line-height: 33px;
+    font-weight: 800;
+}
+.about-content span{
+    display: block;
+    font-size: 14px;
+    line-height: 20px;
+    font-weight: 400;
+    margin-bottom: 20px;
+}
+.about-content p{
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: 400;
+}
+.progress-bar{
+    font-size: 13px;
+    line-height: 14.5px;
+    font-weight: 500;
+    position: relative;
+}
+.percentage1::after{
+    content: "95%";
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    font-size: 14px;
+    color: #fff;
+}
+.percentage2::after{
+    content: "80%";
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    font-size: 14px;
+    color: #fff;
+}
+.percentage3::after{
+    content: "90%";
+    position: absolute;
+    top: 6px;
+    right: 10px;
+    font-size: 14px;
+    color: #fff;
+}
+.progress{
+    height: 25px;
+}
+.download{
+    padding: 10px 30px;
+    background-color: #000;
+    color: #ffffff;
+    font-size: 15px;
+    line-height: 16.5px;
+    font-weight: 400;
+    border-radius: 5px;
+    border: #000 1px solid;
+    transition: .5s ease;
+}
+.download:hover{
+    background-color: #ffffff;
+    color: #000;
+}
+.contact-me{
+    padding: 10px 30px;
+    background-color: #ffffff;
+    color: #000;
+    font-size: 15px;
+    line-height: 16.5px;
+    font-weight: 400;
+    border-radius: 5px;
+    border: #000 1px solid;
+    transition: .5s ease;
+}   
+.contact-me:hover{
+    background-color: #000;
+    color: #ffffff;
+}
+/* ------------------------services section---------------------------- */
+#services{
+    background-color: #F7F7F7;
+    padding: 100px 0 70px 0;
+}
+.title-section h3{
+    font-size: 40px;
+    line-height: 44px;
+    font-weight: 900;
+    display: inline-block;
+    z-index: 5;
+    margin-bottom: 80px;
+}
+.title-section h3::after{
+    content: "";
+    width: 100%;
+    height: 30px;
+    background-image: url(/imgs/dots.png);
+    background-repeat: repeat;
+    position: absolute;
+    bottom: -10px;
+    left: 0;
+    z-index: -1;
+}
+.services-item{
+    margin-bottom: 30px;
+    box-shadow: 0px 10px 30px -8px rgba(0, 0, 0, 0.1);
+}
+.services-item:hover .services-icon{
+    background-color: #1C1C1C;
+    
+}
+.services-item:hover .services-icon i{
+    color: #EEEEEE;
+}
+.services-icon{
+    width: 70px;
+    height: 70px;
+    background-color: #E4E4E4;
+    transition: all .5s ease;
+}
+.services-icon i{
+    font-size: 28px;
+    line-height: 28px;
+    color: #343434;
+    transition: all .5s ease;
+}
+.services-item h6{
+    font-size: 18px;
+    line-height: 20px;
+    font-weight: 800;
+}
+.services-item p{
+    font-size: 14px;
+    line-height: 22.5px;
+    font-weight: 400;
+    word-spacing: 2px;
+}
+/* ----------------------------portfolio section------------------------- */
+#portfolio{
+    padding: 100px 0 70px;
+}
+.portfolio-img-overlay{
+    position: absolute;
+    top: 5px;
+    bottom: 5px;
+    right: 5px;
+    left: 5px;
+    background-color: #FDFDFD;
+    opacity: 0;
+    transition: all .5s ease;
+    transform: translateY(5%);
+}
+.portfolio-img:hover .portfolio-img-overlay{
+    opacity: 1;
+    transform: translateY(0);
+}
+.overlay-info{
+    position: absolute;
+    width: 100%;
+    top: 50%;
+}
+.overlay-info h6{
+    font-size: 12px;
+    font-weight: 700;
+    letter-spacing: 2px;
+    margin-bottom: 15px;
+    transform: translateY(-30px);
+    transition: all .5s ease;
+}
+.portfolio-img:hover .overlay-info h6{
+    transform: translateY(0px);
+}
+.portfolio-icon{
+    transform: translateY(15px);
+    transition: all .5s ease;
+}
+.portfolio-img:hover .portfolio-icon{
+    transform: translateY(0px);
+}
+.portfolio-icon span{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 30px;
+    height: 30px;
+}
+.portfolio-icon span a{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.portfolio-icon span a i{
+    display: block;
+    color: #ffffff;
+    font-size: 12px;
+}
+#portfolio .nav-item .nav-link{
+    font-weight: 700;
+    line-height: 23px;
+    margin-left: 25px;
+    padding: 0;
+}
+#portfolio .nav-item{
+    position: relative;
+}
+#portfolio .nav-link.active:before{
+    width: 100%;
+}
+#portfolio .nav-link::before{
+    content: '';
+    position: absolute;
+    height: 2px;
+    width: 0;
+    top: 120%;
+    left: 0;
+    background-color: #000;
+    transition: .4s ease;
+}
+/* ----------------------clients section--------------------------- */
+#clients{
+    background-color: #F7F7F7;
+    padding: 100px 0 70px;
+}
+.author-img{
+    width: 90px;
+    height: 90px;
+}
+.carousel-indicators [data-bs-target]{
+    width: 12px;
+    height: 12px;
+    border-radius: 50%;
+    background: #d6d6d6;
+    border: 0;
+    transition: opacity 0.2s ease;
+}
+.carousel-item h6{
+    font-size: 16px;
+    line-height: 17.5px;
+    font-weight: 600;
+}
+.carousel-item span{
+    font-size: 12px;
+    line-height: 17.2px;
+    font-weight: 700;
+    color: #888888;
+}
+/* counter section */
+#counter{
+    padding: 100px 0 70px;
+}
+.counter-icon{
+    font-size: 30px;
+    line-height: 30px;
+    margin-bottom: 20px;
+}
+.counter-item h3{
+    font-size: 30px;
+    line-height: 33px;
+    font-weight: 900;
+}
+.counter-item p{
+    font-size: 15px;
+    line-height: 24px;
+    font-weight: 600;
+}
+/* ----------------------team section--------------------- */
+#team{
+    background-color: #F7F7F7;
+    padding: 100px 0 70px;
+}
+.img-text{
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+}
+.img-text{
+    padding: 25px;
+    background-color: #5B5B5B;
+}
+.img-text h4{
+    font-size: 25px;
+    line-height: 27.5px;
+    font-weight: 500;
+}
+.team-social{
+    background-color: rgba(255, 255, 255, 0.95);
+    position: absolute;
+    text-align: center;
+    inset: 5px;
+    opacity: 0;
+    transition: 0.5s;
+    transform: rotateY(180deg) scale(0.5, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.team-img:hover .team-social{
+    opacity: 1;
+    transform:rotateY(0) scale(1, 1) ;
+}
+.team-img img{
+    transition: .5s;
+}
+.team-img:hover img{
+    transform: scale(1.3);
+}
+.team-icon a{
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    background-color: #000;
+    border: #000 1px solid;
+    transition: .5s ease;
+}
+.team-icon a:hover{
+    background-color: #ffffff;
+}
+.team-icon a i{
+    color: #ffffff;
+    transition: .5s ease;
+}
+.team-icon a:hover  i{
+    color: #000;
+}
+/* ---------------------------contact section-------------------------- */
+#contact{
+    padding: 100px 0 70px;
+}
+.contact-item{
+    margin-bottom: 30px;
+}
+.contact-item:hover .contact-icon{
+    background-color: #000;
+    color: #ffffff;
+}
+.contact-icon{
+    width: 60px;
+    height: 60px;
+    border-radius: 50%;
+    background-color: #F7F7F7;
+    color: #000;
+    font-size: 25px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 20px;
+    transition: .5s ease;
+}
+.contact-item h6{
+    font-size: 16px;
+    line-height: 18px;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.form-group{
+    margin-bottom: 20px;
+}
+.form-group input{
+    height: 40px;
+    padding-left: 20px;
+}
+.contact-btn{
+    padding: 10px 40px;
+    border-radius: 8px;
+    border: #000 1px solid;
+    background-color: #000;
+    color: #ffffff;
+    margin-bottom: 20px;
+    transition: .5s ease;
+}
+.contact-btn:hover{
+    background-color: #ffffff;
+    color: #000;
+}
+/*--------------------------- footer section ------------------------------- */
+#footer{
+    padding: 30px;
+    background-color: #1C1C1C;
+}
+#footer p{
+    color: #748182;
+    font-size: 13px;
+    line-height: 21px;
+    font-weight: 400;
+    text-align: center;
+}
+@media (max-width:768px) {
+    .nav-link:hover:before{
+        width: 20%;
+    }
+    .nav-link.active:before{
+        width: 20%;
+    }
+}
+@media (max-width:600px) {
+    .home-content p{
+        font-size: 30px;
+    }
+    @keyframes control-width{
+        0% {
+            width: 60px;
+        }
+        30%{
+            width: 200px;
+        }
+        80% {
+            width: 200px;
+        }
+        100%{
+            width: 75px;
+        }
+    }
 }
