--- a/css/style.css
+++ b/css/style.css
@@ -159,7 +159,7 @@ a{
     position: absolute;
     left: 0px;
     bottom: -30px;
-    background-image: url(/imgs/dots.png);
+    background-image: url(../imgs/dots.png);
     background-repeat: repeat;
     z-index: -1;
 }
@@ -260,7 +260,7 @@ a{
     content: "";
     width: 100%;
     height: 30px;
-    background-image: url(/imgs/dots.png);
+    background-image: url(../imgs/dots.png);
     background-repeat: repeat;
     position: absolute;
     bottom: -10px;
